--- a/index.html
+++ b/index.html
@@ -1,265 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="style.css">
-	<title>Text Editor</title>
-	<style>
-	  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-}
-
-body {
-	background: #ddd;
-	display: flex;
-	justify-content: center;
-	min-height: 100vh;
-}
-
-li {
-	margin-left: 16px;
-}
-
-a {
-	cursor: pointer;
-}
-
-.container {
-	max-width: 991px;
-	width: 100%;
-	background: #fff;
-	border-radius: 8px;
-	overflow: hidden;
-}
-.toolbar {
-	padding: 16px;
-	background: #eee;
-}
-.toolbar .head {
-	display: flex;
-	grid-gap: 10px;
-	margin-bottom: 16px;
-	flex-wrap: wrap;
-}
-
-.toolbar .head > input {
-	max-width: 100px;
-	padding: 6px 10px;
-	border-radius: 6px;
-	border: 2px solid #ddd;
-	outline: none;
-}
-.toolbar .head select {
-	background: #fff;
-	border: 2px solid #ddd;
-	border-radius: 6px;
-	outline: none;
-	cursor: pointer;
-}
-.toolbar .head .color {
-	background: #fff;
-	border: 2px solid #ddd;
-	border-radius: 6px;
-	outline: none;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	grid-gap: 6px;
-	padding: 0 10px;
-}
-
-.toolbar .head .color span {
-	font-size: 14px;
-}
-.toolbar .head .color input {
-	border: none;
-	padding: 0;
-	width: 26px;
-	height: 26px;
-	background: #fff;
-	cursor: pointer;
-}
-.toolbar .head .color input::-moz-color-swatch {
-	width: 20px;
-	height: 20px;
-	border: none;
-	border-radius: 50%;
-}
-.toolbar .btn-toolbar {
-	display: flex;
-	align-items: center;
-	overflow: auto;
-}
-.toolbar .btn-toolbar button {
-	background: #fff;
-	border: 2px solid #ddd;
-	border-radius: 6px;
-	cursor: pointer;
-	padding: 10px;
-	height: 40px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-left: 10px;
-	font-size: 25px;
-}
-
-.toolbar .btn-toolbar button:hover {
-	background: #555;
-	border: 2px solid #111;
-}
-
-.toolbar .btn-toolbar button:hover {
-	background: #f3f3f3;
-}
-#content {
-	padding: 10px;
-	outline: none;
-	height: 80vh;
-	overflow: auto;
-}
-#show-code[data-active="true"] {
-	background: #eee;
-}
-	</style>
+<head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Picker</title>
+    <script type="module">
+        // Import the functions you need 
+        // from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js"; 
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-analytics.js"; 
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js"; 
+        import { getAuth } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
+        // TODO: Add SDKs for Firebase 
+        // products that you want to use 
+        // https://firebase.google.com/docs/web/setup#available-libraries 
+        // Your web app's Firebase 
+        // configuration For Firebase JS 
+        // SDK v7.20.0 and later, 
+        // measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyBPtO5RpJGLxWrrIIgvZDuXag79YRJ4ulk",
+            authDomain: "kenzglobe-pwa.firebaseapp.com", 
+            projectId: "kenzglobe-pwa", 
+            storageBucket: "kenzglobe-pwa.firebasestorage.app", 
+            messagingSenderId: "370471758903",
+            appId: "1:370471758903:web:e5bd297993fdb8ff1ca3b2", 
+            measurementId: "G-GWEG7CP177"
+        };
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig); 
+        const analytics = getAnalytics(app); 
+        console.log("Firebase App initialized:", app);
+        console.log("Firebase Analytics:", analytics);
+    </script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #222;
+            font-family: Arial, sans-serif;
+        }
+        .color-picker {
+            background:#333;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            color: white;
+            width: 250px;
+        }
+        input[type="range"] {
+            width: 100%;
+            margin: 5px 0;
+        }
+        .color-display { display: flex; justify-content: center; align-items: center; margin-top: 10px; }
+        #hex-value { font-size: 18px; margin-right: 10px;}
+        #selected-color { width: 40px; height: 40px; border: 1px solid white; background-color: hsl(220, 80%, 50%); }
+        .buttons { margin-top: 10px; }
+        button { background-color: #555; border: none; padding: 10px; color: white; cursor: pointer; margin: 5px; }
+        button:hover { background-color: #777; }
+    </style>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
-	<div class="container">
-		<div class="toolbar">
-			<div class="head">
-				<input type="text" placeholder="Filename" value="untitled" id="filename">
-				<select onchange="fileHandle(this.value); this.selectedIndex=0">
-				  <option value="" selected="" hidden="" disabled="">File</op>
-					<option value="new">New file</option>
-					<option value="txt">Save as txt</option>
-					<option value="pdf">Save as pdf</option>
-				</select>
-				<select onchange="formatDoc('formatBlock', this.value); this.selectedIndex=0;">
-					<option value="" selected="" hidden="" disabled="">Format</option>
-					<option value="h1">Heading 1</option>
-					<option value="h2">Heading 2</option>
-					<option value="h3">Heading 3</option>
-					<option value="h4">Heading 4</option>
-					<option value="h5">Heading 5</option>
-					<option value="h6">Heading 6</option>
-					<option value="p">Paragraph</option>
-				</select>
-				<select onchange="formatDoc('fontSize', this.value); this.selectedIndex=0;">
-					<option value="" selected="" hidden="" disabled="">Font size</option>
-					<option value="1">Extra small</option>
-					<option value="2">Small</option>
-					<option value="3">Regular</option>
-					<option value="4">Medium</option>
-					<option value="5">Large</option>
-					<option value="6">Extra Large</option>
-					<option value="7">Big</option>
-				</select>
-				<div class="color">
-					<span>Color</span>
-					<input type="color" oninput="formatDoc('foreColor', this.value); this.value='#000000';">
-				</div>
-				<div class="color">
-					<span>Background</span>
-					<input type="color" oninput="formatDoc('hiliteColor', this.value); this.value='#000000';">
-				</div>
-			</div>
-			<div class="btn-toolbar">
-				<button onclick="formatDoc('undo')"><i class='bx bx-undo' ></i></button>
-				<button onclick="formatDoc('redo')"><i class='bx bx-redo' ></i></button>
-				<button onclick="formatDoc('bold')"><i class='bx bx-bold'></i></button>
-				<button onclick="formatDoc('underline')"><i class='bx bx-underline' ></i></button>
-				<button onclick="formatDoc('italic')"><i class='bx bx-italic' ></i></button>
-				<button onclick="formatDoc('strikeThrough')"><i class='bx bx-strikethrough' ></i></button>
-				<button onclick="formatDoc('justifyLeft')"><i class='bx bx-align-left' ></i></button>
-				<button onclick="formatDoc('justifyCenter')"><i class='bx bx-align-middle' ></i></button>
-				<button onclick="formatDoc('justifyRight')"><i class='bx bx-align-right' ></i></button>
-				<button onclick="formatDoc('justifyFull')"><i class='bx bx-align-justify' ></i></button>
-				<button onclick="formatDoc('insertOrderedList')"><i class='bx bx-list-ol' ></i></button>
-				<button onclick="formatDoc('insertUnorderedList')"><i class='bx bx-list-ul' ></i></button>
-				<button onclick="addLink()"><i class='bx bx-link' ></i></button>
-				<button onclick="formatDoc('unlink')"><i class='bx bx-unlink' ></i></button>
-				<button id="show-code" data-active="false">&lt;/&gt;</button>
-			</div>
-		</div>
-		<div id="content" contenteditable="true" spellcheck="true">KenzGlobe Text Editor</div>
-	</div>
-	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script>
-	  function formatDoc(cmd, value=null) {
-	if(value) {
-		document.execCommand(cmd, false, value);
-	} else {
-		document.execCommand(cmd);
-	}
-}
-
-function addLink() {
-	const url = prompt('Insert url');
-	formatDoc('createLink', url);
-}
-
-
-
-
-const content = document.getElementById('content');
-
-content.addEventListener('mouseenter', function () {
-	const a = content.querySelectorAll('a');
-	a.forEach(item=> {
-		item.addEventListener('mouseenter', function () {
-			content.setAttribute('contenteditable', false);
-			item.target = '_blank';
-		})
-		item.addEventListener('mouseleave', function () {
-			content.setAttribute('contenteditable', true);
-		})
-	})
-})
-
-
-const showCode = document.getElementById('show-code');
-let active = false;
-
-showCode.addEventListener('click', function () {
-	showCode.dataset.active = !active;
-	active = !active
-	if(active) {
-		content.textContent = content.innerHTML;
-		content.setAttribute('contenteditable', false);
-	} else {
-		content.innerHTML = content.textContent;
-		content.setAttribute('contenteditable', true);
-	}
-})
-
-
-
-const filename = document.getElementById('filename');
-
-function fileHandle(value) {
-	if(value === 'new') {
-		content.innerHTML = '';
-		filename.value = 'untitled';
-	} else if(value === 'txt') {
-		const blob = new Blob([content.innerText])
-		const url = URL.createObjectURL(blob)
-		const link = document.createElement('a');
-		link.href = url;
-		link.download = `${filename.value}.txt`;
-		link.click();
-	} else if(value === 'pdf') {
-		html2pdf(content).save(filename.value);
-	}
-}
-	</script>
+    <div class="color-picker">
+        <label>Hue</label>
+        <input type="range" id="hue" min="0" max="360" value="220"> 
+        <label>Saturation</label>
+        <input type="range" id="saturation" min="0" max="100" value="80"> 
+        <label>Lightness</label>
+        <input type="range" id="lightness" min="0" max="50" value="50"> 
+        <label>Opacity</label>
+        <input type="range" id="opacity" min="0" max="100" value="100">
+        <div class="color-display">
+            <span id="hex-value">#748EFF</span> 
+            <div id="selected-color"></div>
+        </div>
+        <div class="buttons"> 
+            <button id="cancel-btn">CANCEL</button> 
+            <button id="select-btn">SELECT</button>
+        </div>
+    </div>
+    <script>
+        const hue = document.getElementById("hue");
+        const saturation = document.getElementById("saturation"); 
+        const lightness = document.getElementById("lightness");
+        const opacity = document.getElementById("opacity");
+        const hexValue = document.getElementById("hex-value");
+        const selectedColor = document.getElementById("selected-color"); 
+        function updateColor() {
+            let h = hue.value;
+            let s = saturation.value;
+            let l = lightness.value;
+            let a = opacity.value / 100;
+            let color = `hsla(${h}, ${s}%, ${l}%, ${a})`;
+            selectedColor.style.backgroundColor = color;
+            let hex = hslToHex(h, s, l); 
+            hexValue.textContent = hex;
+        }
+        
+        function hslToHex(h, s, l) {
+            s /= 100;
+            l /= 100;
+            let c = (1 - Math.abs(2 * l - 1)) * s;
+            let x = c * (1 - Math.abs((h / 60) % 2 - 1));
+            let m = l - c / 2;
+            let r = 0, g = 0, } = 0;
+            if (h < 60) {
+                r = c;
+                g = x;
+            } else if (h < 120) {
+                r = x;
+                g = c;
+            } else if (h < 180) {
+                g = c;
+                b = x;
+            } else if (h < 240) {
+                g = x;
+                b = c;
+            } else if (h < 300) {
+                r = x;
+                b = c;
+            }
+            else {
+                r = c;
+                g = 0;
+                b = x;
+            }
+            
+            r = Math.round((r + m) * 255);
+            g = Math.round((g + m) * 255);
+            b = Math.round((b + m) * 255);
+            return `#${r.toString(16).padStart(2, "0")}${g.toString(16).padStart(2, "0")}${b.toString(16).padStart(2, "0")}`;
+        }
+        // Update color when sliders are changed
+        [hue, saturation, lightness, opacity].forEach(input => {
+            input.addEventListener("input", updateColor);
+        });
+        // Initialize color on load updateColor();
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("service-worker.js")
+            .then(() => console.log("Service Worker Registered"))
+            .catch((error) => console.log("Service Worker Registration Failed", error));
+        }
+    </script>
 </body>
 </html>
